fix the overflow cuased in the subscription form section on home page

--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ body {
     max-width: 1920px;
     margin-inline: auto;
     background-color: var(--bg-color);
-    overflow: hidden;
 }
 
 header {
@@ -309,6 +308,7 @@ section>h2,
     left: 50%;
     transform: translate(-50%, 50%);
     z-index: -1;
+    transition: all .2s ease-in-out;
     border-radius: 30px 0 10px;
 }
 
@@ -568,6 +568,12 @@ section>h2,
     }
 }
 
+.subscribe-form {
+    padding-block: 50px;
+    overflow: hidden;
+}
+
+
 .subscribe-form form {
     position: relative;
     background-color: #DFD7F9;
@@ -578,7 +584,6 @@ section>h2,
     border-radius: 130px 20px 20px;
     align-items: center;
     gap: 3rem;
-    /* overflow: hidden; */
 
     h3 {
         font-size: 33px;
